Changelog
=========

Nutils is under active development and the API is not frozen. Active
users are advised to keep an eye on this file to stay up to date with
the most prominent user-facing changes.


Changed: pariter, parmap

  The parellel.pariter and parellel.parmap functions now require the
  desired number of processors to be explicitly requested through the
  'nprocs' argument. The parallel.shzeros function always returns an
  shared memory regardless of the value of the global nprocs property,
  which is no longer referenced in the parallel module.


New: topology.with{subdomain,boundary,interfaces,points}

  Topologies have been made fully immutable, which means that the old
  setitem operation is no longer supported. Instead, to add a
  subtopology to the domain, its boundary, its interfaces, or points,
  any of the methods .withsubdomain, .withboundary, .withinterfaces, and
  .withpoints, respectively, will return a copy of the topology with the
  desired groups added.

  Removed syntax:
  >> domain.boundary['wall'] = domain.boundary['left,top']

  New:
  >> domain = domain.withboundary( wall=domain.boundary['left,top'] )
  >> domain.boundary['wall'].integrate( ... )

  Alternative:
  >> domain = domain.withboundary( wall='left,top' )


New: circular symmetry

  Any topology can be revolved using the new .revolved method, which
  interprets the first geometry dimension as a radius and replaces it by
  two new dimensions, shifting the remaining axes backward. In addition
  to the modified topology and geometry, simplifying function is
  returned as the third return value which replaces all occurrences of
  the revolution angle by zero. This should only be used after all
  gradients have been computed, typically in integrate or elem_eval.

  >> rdomain, rgeom, simplify = domain.revolved( geom )
  >> basis = rdomain.basis( 'spline', degree=2 )
  >> M = function.outer( basis.grad(rgeom) ).sum(-1)